# toby-platform

./: .gitignore  CMakeLists.txt  README.md
engine/: main.cpp  main_v2.cpp
engine/common/: PriceTicks.hpp
engine/market/: MarketDataRouter.hpp  MarketDataRouterV2.hpp
engine/orderbook/: Book.hpp  Level.hpp  OrderIndex.hpp  OrderLoc.hpp  OrderPool.hpp  test_best.cpp  test_min.cpp
engine/tick/: CMakeLists.txt  TickEvent.hpp  TickEventV2.hpp  TickReplayer.cpp  TickReplayer.hpp  TickReplayerV2.cpp  TickReplayerV2.hpp
tools/: write_ticks.cpp  write_ticks_v2.cpp
